Update build env path

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -109,29 +109,29 @@ jobs:
         shell: cmd
         working-directory: ${{github.workspace}}
         run: |
-           call build\generators\conanvcvars.bat
-           call build\generators\conanbuild.bat
+           call build\conanvcvars.bat
+           call build\conanbuild.bat
 
       - name: Configure Conan Build
         if: matrix.settings.os != 'windows-latest'
         shell: bash
         working-directory: ${{github.workspace}}
         run: |
-           source build/generators/conanbuild.sh
+           source build/conanbuild.sh
 
       - name: Configure CMake
         if: matrix.settings.os == 'windows-latest'
         shell: cmd
         run: |
           cmake --version
-          call build\generators\conanbuild.bat
+          call build\conanbuild.bat
           cmake --preset conan-default
 
       - name: Configure CMake
         if: matrix.settings.os != 'windows-latest'
         shell: bash
         run: |
-          source build/generators/conanbuild.sh
+          source build/conanbuild.sh
           cmake --preset conan-default 
 
       - name: Conan Preset
@@ -142,14 +142,14 @@ jobs:
         if: matrix.settings.os == 'windows-latest'
         shell: cmd
         run: |
-          call build\generators\conanbuild.bat
+          call build\conanbuild.bat
           cmake --build --preset ${{ env.CONAN_PRESET }}
 
       - name: Build
         if: matrix.settings.os != 'windows-latest'
         shell: bash
         run: |
-          source build/generators/conanbuild.sh
+          source build/conanbuild.sh
           cmake --build --preset ${{ env.CONAN_PRESET }}
 
       - name: Test
