--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,26 +14,26 @@ jobs:
       matrix:
         configuration: [ "Release", "Debug" ]
         settings:
-          - {
-              name: "Ubuntu GCC-13",
-              os: ubuntu-latest,
-              compiler: { type: GCC, version: 13, conan: "gcc", cc: "gcc-13", cxx: "g++-13", std: 17 },
-              lib: "libstdc++11"
-            }
-          - {
-              name: "Ubuntu Clang-16 + libc++",
-              os: ubuntu-latest,
-              compiler:
-                {
-                  type: CLANG,
-                  version: 16,
-                  conan: "clang",
-                  cc: "clang-16",
-                  cxx: "clang++-16",
-                  std: 17
-                },
-              lib: "libc++",
-            }
+#          - {
+#              name: "Ubuntu GCC-13",
+#              os: ubuntu-latest,
+#              compiler: { type: GCC, version: 13, conan: "gcc", cc: "gcc-13", cxx: "g++-13", std: 17 },
+#              lib: "libstdc++11"
+#            }
+#          - {
+#              name: "Ubuntu Clang-16 + libc++",
+#              os: ubuntu-latest,
+#              compiler:
+#                {
+#                  type: CLANG,
+#                  version: 16,
+#                  conan: "clang",
+#                  cc: "clang-16",
+#                  cxx: "clang++-16",
+#                  std: 17
+#                },
+#              lib: "libc++",
+#            }
           - {
               name: "Visual Studio 2019",
               os: windows-latest,
