--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,11 @@ target_sources(ConanCatch2IssueWithCxx17
 )
 target_link_libraries(ConanCatch2IssueWithCxx17
     PRIVATE
-        Catch2::Catch2
+        Catch2::Catch2WithMain
 )
 set_target_properties(ConanCatch2IssueWithCxx17
     PROPERTIES
-        CXX_STANDARD 20
+        CXX_STANDARD 17
         CXX_STANDARD_REQUIRED ON
         CXX_EXTENSIONS OFF
 )
